# python-project-50

./: .gitignore  Makefile  README.md  file20.json  pyproject.toml
.github/workflows/: pyci.yaml
gendiff/: __init__.py  _formatter.py  _gendiff.py  _model.py  cli.py  fetcher.py  formatter.py  gendiff.py  gendiff_new.py  model.py  parser.py
gendiff/formatters/: __init__.py  json_formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_generate_diff.py  test_generate_diff_json_format.py  test_generate_diff_plain_format.py  test_generate_diff_stylish_format.py  test_model.py
tests/fixtures/nested/: expected.txt  file1.json  file2.yaml  file2.yml
tests/fixtures/nested/expected/: json_format.txt  plain_format.txt
tests/fixtures/plain/: expected.txt  file1.yaml  file2.yaml
tests/fixtures/plain/expected/: json_format.txt
