[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A calculator of differences between two configuration files"
authors = ["Kirill Zhelvakov <blzneci.89@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/blizneci/python-project-50"
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
termcolor = "^2.3.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
